Fix image source for profile picture

--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@ footer {
 
         <div class="hero-media">
           <div class="profile-ring">
-            <img class="profile-img" src="assets/img/profile.jpg" alt="今川大悟のプロフィール写真">
+            <img class="profile-img" src="assets/img/profile.jpg.png" alt="今川大悟のプロフィール写真">
           </div>
           <div class="mini-grid">
             <div class="kpi">
