--- a/contact.html
+++ b/contact.html
@@ -192,7 +192,7 @@ footer{margin-top:26px;padding-top:16px;border-top:1px solid var(--line-subtle);
 
 .contact-card.card-form::before{background:linear-gradient(90deg,var(--accent),var(--accent2))}
 .contact-card.card-cw::before{background:linear-gradient(90deg,#00a960,#4dc870)}
-.contact-card.card-ig::before{background:linear-gradient(90deg,#f58529,#dd2a7b,#8134af)}
+.contact-card.card-fb::before{background:#1877f2}
 .contact-card.card-line::before{background:#06c755}
 
 .card-icon{
@@ -354,16 +354,16 @@ footer{margin-top:26px;padding-top:16px;border-top:1px solid var(--line-subtle);
           </div>
         </a>
 
-        <!-- Instagram -->
-        <a class="contact-card card-ig" href="#" target="_blank" rel="noopener noreferrer">
-          <div class="card-icon" style="background:rgba(225,48,108,.06);border-color:rgba(225,48,108,.1);">
-            <svg width="18" height="18" fill="none" stroke="#e1306c" stroke-width="2" viewBox="0 0 24 24"><rect x="2" y="2" width="20" height="20" rx="5"/><path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37z"/><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/></svg>
+        <!-- Facebook -->
+        <a class="contact-card card-fb" href="https://www.facebook.com/share/1CJyYa1E9L/?mibextid=wwXIfr" target="_blank" rel="noopener noreferrer">
+          <div class="card-icon" style="background:rgba(24,119,242,.06);border-color:rgba(24,119,242,.1);">
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="#1877f2"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
           </div>
           <div class="card-label">SNS</div>
-          <div class="card-title">Instagram</div>
-          <div class="card-desc">DMでもお気軽にどうぞ。制作事例や日常の発信もしています。</div>
-          <div class="card-action" style="color:#e1306c;">
-            フォローする
+          <div class="card-title">Facebook</div>
+          <div class="card-desc">Messengerでもお気軽にご連絡ください。</div>
+          <div class="card-action" style="color:#1877f2;">
+            プロフィールを見る
             <svg width="14" height="14" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" y1="14" x2="21" y2="3"/></svg>
           </div>
         </a>
