--- a/works.html
+++ b/works.html
@@ -376,6 +376,8 @@ footer{margin-top:26px;padding-top:16px;border-top:1px solid var(--line-subtle);
         <button class="filter-btn active" data-filter="all">すべて</button>
         <button class="filter-btn" data-filter="web">Web制作</button>
         <button class="filter-btn" data-filter="lp">LP</button>
+        <button class="filter-btn" data-filter="corporate">コーポレート</button>
+        <button class="filter-btn" data-filter="shop">店舗サイト</button>
         <button class="filter-btn" data-filter="doc">資料</button>
       </div>
 
@@ -409,18 +411,8 @@ footer{margin-top:26px;padding-top:16px;border-top:1px solid var(--line-subtle);
         <!-- ===== WORK 01: 居酒屋LP ===== -->
         <a class="work-card" href="izakaya-lp.html" target="_blank" data-category="web lp">
           <div class="work-banner">
-            <div class="work-banner-bg" style="background:
-              linear-gradient(135deg, #0e0b07 0%, #1a1510 40%, #2a1f14 70%, #0e0b07 100%);
-              display:flex;align-items:center;justify-content:center;
-            ">
-              <div style="text-align:center;position:relative;z-index:1;">
-                <div style="font-family:'Zen Old Mincho',serif;font-size:clamp(28px,4vw,48px);font-weight:900;color:#f5efe6;letter-spacing:.06em;line-height:1.2;text-shadow:0 4px 20px rgba(0,0,0,.5);">
-                  炭火と旬<br><span style="color:#e8a838;">よりみち</span>
-                </div>
-                <div style="margin-top:8px;font-size:12px;color:rgba(245,239,230,.5);letter-spacing:.08em;">名古屋 伏見 — 和食居酒屋LP</div>
-              </div>
-              <div style="position:absolute;bottom:-20%;right:10%;width:300px;height:300px;border-radius:50%;background:radial-gradient(circle,rgba(232,168,56,.12),transparent 65%);filter:blur(40px);pointer-events:none;"></div>
-              <div style="position:absolute;top:10%;left:5%;width:200px;height:200px;border-radius:50%;background:radial-gradient(circle,rgba(192,57,43,.08),transparent 65%);filter:blur(40px);pointer-events:none;"></div>
+            <div class="work-banner-bg" style="background:linear-gradient(135deg,#0e0b07,#2a1f14,#0e0b07);display:flex;align-items:center;justify-content:center;">
+              <span style="font-family:'Zen Old Mincho',serif;font-size:clamp(24px,4vw,42px);font-weight:900;color:#f5efe6;letter-spacing:.06em;text-shadow:0 4px 20px rgba(0,0,0,.5);">炭火と旬 <span style="color:#e8a838;">よりみち</span></span>
             </div>
             <span class="work-badge">架空店舗</span>
             <span class="work-type">LP</span>
@@ -434,9 +426,7 @@ footer{margin-top:26px;padding-top:16px;border-top:1px solid var(--line-subtle);
               炭火と旬 よりみち — 和食居酒屋LP
               <svg class="work-title-arrow" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M5 12h14"/><path d="M12 5l7 7-7 7"/></svg>
             </div>
-            <p class="work-desc">
-              名古屋・伏見の架空の居酒屋を想定したLP制作例。備長炭の串焼きと旬の鮮魚をウリにした「賑やか系」居酒屋のランディングページです。ダークベースに琥珀色のアクセント、火の粉エフェクト、タブ切り替えメニューなどを実装。
-            </p>
+            <p class="work-desc">名古屋・伏見の架空の居酒屋を想定したLP。備長炭の串焼きと旬の鮮魚がウリの「賑やか系」居酒屋ページです。ダークベースに琥珀色アクセント、火の粉エフェクト、タブ切り替えメニューなどを実装。</p>
             <div class="work-tags">
               <span class="work-tag">HTML / CSS / JS</span>
               <span class="work-tag">LP</span>
@@ -447,8 +437,94 @@ footer{margin-top:26px;padding-top:16px;border-top:1px solid var(--line-subtle);
           </div>
         </a>
 
+        <!-- ===== WORK 02: 建設会社コーポレート ===== -->
+        <a class="work-card" href="construction.html" target="_blank" data-category="web corporate">
+          <div class="work-banner">
+            <div class="work-banner-bg" style="background:linear-gradient(135deg,#1b2a4a,#2c3e6b,#1b2a4a);display:flex;align-items:center;justify-content:center;">
+              <span style="font-family:'Noto Serif JP',serif;font-size:clamp(22px,3.5vw,36px);font-weight:900;color:#fff;letter-spacing:.04em;text-shadow:0 4px 20px rgba(0,0,0,.3);">丸正建設株式会社</span>
+            </div>
+            <span class="work-badge">架空企業</span>
+            <span class="work-type">コーポレート</span>
+            <div class="work-banner-view">
+              見てみる
+              <svg width="14" height="14" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" y1="14" x2="21" y2="3"/></svg>
+            </div>
+          </div>
+          <div class="work-body">
+            <div class="work-title">
+              丸正建設株式会社 — 建設業コーポレートサイト
+              <svg class="work-title-arrow" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M5 12h14"/><path d="M12 5l7 7-7 7"/></svg>
+            </div>
+            <p class="work-desc">名古屋の架空の総合建設会社を想定したコーポレートサイト。信頼感・堅実さを重視したネイビー基調のデザイン。会社理念、事業内容、施工実績カウンター、採用情報、お問い合わせセクションを実装。</p>
+            <div class="work-tags">
+              <span class="work-tag">HTML / CSS / JS</span>
+              <span class="work-tag">コーポレート</span>
+              <span class="work-tag">建設業</span>
+              <span class="work-tag">レスポンシブ</span>
+              <span class="work-tag">採用ページ</span>
+            </div>
+          </div>
+        </a>
+
+        <!-- ===== WORK 03: ベーカリーカフェ ===== -->
+        <a class="work-card" href="bakery-cafe.html" target="_blank" data-category="web shop">
+          <div class="work-banner">
+            <div class="work-banner-bg" style="background:linear-gradient(145deg,#faf6f1,#f5ead8,#efe3d0);display:flex;align-items:center;justify-content:center;">
+              <span style="font-family:'Zen Maru Gothic',sans-serif;font-size:clamp(22px,3.5vw,36px);font-weight:900;color:#7c5e3c;letter-spacing:.04em;">粉とひだまり</span>
+            </div>
+            <span class="work-badge">架空店舗</span>
+            <span class="work-type">店舗サイト</span>
+            <div class="work-banner-view">
+              見てみる
+              <svg width="14" height="14" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" y1="14" x2="21" y2="3"/></svg>
+            </div>
+          </div>
+          <div class="work-body">
+            <div class="work-title">
+              粉とひだまり — ベーカリーカフェ店舗サイト
+              <svg class="work-title-arrow" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M5 12h14"/><path d="M12 5l7 7-7 7"/></svg>
+            </div>
+            <p class="work-desc">名古屋・覚王山の架空のベーカリーカフェを想定した店舗サイト。温かみのあるクリーム×ブラウン配色で、丸ゴシック体を使ったナチュラルなデザイン。パンのラインナップ、カフェメニュー、アクセス情報を掲載。</p>
+            <div class="work-tags">
+              <span class="work-tag">HTML / CSS / JS</span>
+              <span class="work-tag">店舗サイト</span>
+              <span class="work-tag">カフェ・パン屋</span>
+              <span class="work-tag">レスポンシブ</span>
+              <span class="work-tag">ナチュラル系</span>
+            </div>
+          </div>
+        </a>
+
+        <!-- ===== WORK 04: 美容室LP ===== -->
+        <a class="work-card" href="salon-lp.html" target="_blank" data-category="web lp shop">
+          <div class="work-banner">
+            <div class="work-banner-bg" style="background:linear-gradient(160deg,#f9f7f5,#e8d4d4,#f3f0ec);display:flex;align-items:center;justify-content:center;">
+              <span style="font-family:'Cormorant Garamond',serif;font-size:clamp(28px,5vw,52px);font-weight:300;color:#2a2a2a;letter-spacing:.12em;">LUIRE</span>
+            </div>
+            <span class="work-badge">架空サロン</span>
+            <span class="work-type">LP</span>
+            <div class="work-banner-view">
+              見てみる
+              <svg width="14" height="14" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" y1="14" x2="21" y2="3"/></svg>
+            </div>
+          </div>
+          <div class="work-body">
+            <div class="work-title">
+              LUIRE（ルイール）— 美容室プライベートサロンLP
+              <svg class="work-title-arrow" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M5 12h14"/><path d="M12 5l7 7-7 7"/></svg>
+            </div>
+            <p class="work-desc">名古屋・栄の架空のプライベートヘアサロンを想定したLP。洗練されたピンク×チャコール配色で、セリフ体を使ったエレガントなデザイン。コンセプト、メニュー・料金表、スタイリスト紹介、予約導線を実装。</p>
+            <div class="work-tags">
+              <span class="work-tag">HTML / CSS / JS</span>
+              <span class="work-tag">LP</span>
+              <span class="work-tag">美容室</span>
+              <span class="work-tag">レスポンシブ</span>
+              <span class="work-tag">エレガント系</span>
+            </div>
+          </div>
+        </a>
+
         <!--
-        ===== ↓ 次の制作例はここに追加 ↓ =====
 
         <a class="work-card" href="ファイル名.html" target="_blank" data-category="web lp">
           <div class="work-banner">
@@ -476,15 +552,6 @@ footer{margin-top:26px;padding-top:16px;border-top:1px solid var(--line-subtle);
 
         ===== ↑ ここまでコピペ ↑ =====
         -->
-
-        <!-- Coming Soon -->
-        <div class="empty-state">
-          <div class="empty-icon">
-            <svg width="24" height="24" fill="none" stroke="var(--accent)" stroke-width="2" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/><path d="M12 6v6l4 2"/></svg>
-          </div>
-          <h3>制作例を追加予定</h3>
-          <p>新しい制作物ができ次第、こちらに追加していきます。</p>
-        </div>
 
       </div>
 
