Update link and text for consultation button

--- a/services.html
+++ b/services.html
@@ -591,9 +591,9 @@ footer{margin-top:26px;padding-top:16px;border-top:1px solid var(--line-subtle);
         「これって頼めるのかな？」くらいの相談でもOKです。お気軽にどうぞ。
       </p>
       <div class="cta" style="margin-top:16px;justify-content:center;">
-        <a class="btn primary" target="_blank" rel="noopener noreferrer" href="https://forms.gle/VzqdTbX2xkR7RJ2N9">
+        <a class="btn primary" target="_blank" rel="noopener noreferrer" href="https://script.google.com/macros/s/AKfycbwOxPCjVw3v3Uq_KyBdCAxelWmyv54x2AjKVh2bku5fH9iC4zSmc5frJNfPBwme3lyDRw/exec">
           <svg width="15" height="15" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
-          相談する（Googleフォーム）
+          相談する（webフォーム）
         </a>
         <a class="btn" href="contact.html">連絡ページへ</a>
       </div>
