--- a/about.html
+++ b/about.html
@@ -384,7 +384,7 @@ footer{margin-top:26px;padding-top:16px;border-top:1px solid var(--line-subtle);
       <h2>数字で見る実績</h2>
       <div class="stats-grid">
         <div class="stat-card">
-          <div class="stat-num" data-target="15">0<span class="stat-unit">件+</span></div>
+          <div class="stat-num" data-target="10">0<span class="stat-unit">件+</span></div>
           <div class="stat-label">Web制作実績</div>
         </div>
         <div class="stat-card">
@@ -392,15 +392,14 @@ footer{margin-top:26px;padding-top:16px;border-top:1px solid var(--line-subtle);
           <div class="stat-label">平均返信時間</div>
         </div>
         <div class="stat-card">
-          <div class="stat-num" data-target="95">0<span class="stat-unit">%</span></div>
+          <div class="stat-num" data-target="80">0<span class="stat-unit">%</span></div>
           <div class="stat-label">リピート・満足度</div>
         </div>
         <div class="stat-card">
-          <div class="stat-num" data-target="3">0<span class="stat-unit">年</span></div>
+          <div class="stat-num" data-target="2">0<span class="stat-unit">年</span></div>
           <div class="stat-label">制作経験</div>
         </div>
-      </div>
-      <p class="note">※数字は仮の値です。実際の実績に合わせて差し替えてください。</p>
+     
     </section>
 
     <!-- 趣味・人柄 -->
@@ -482,9 +481,9 @@ footer{margin-top:26px;padding-top:16px;border-top:1px solid var(--line-subtle);
       </p>
       <div class="cta" style="margin-top:16px;justify-content:center;">
         <a class="btn primary" target="_blank" rel="noopener noreferrer"
-           href="https://forms.gle/VzqdTbX2xkR7RJ2N9">
+           href="https://script.google.com/macros/s/AKfycbwOxPCjVw3v3Uq_KyBdCAxelWmyv54x2AjKVh2bku5fH9iC4zSmc5frJNfPBwme3lyDRw/exec">
           <svg width="15" height="15" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
-          相談する（Googleフォーム）
+          相談する（webフォーム）
         </a>
         <a class="btn" href="contact.html">連絡ページへ</a>
       </div>
