--- a/index.html
+++ b/index.html
@@ -948,7 +948,7 @@ footer {
             <a class="btn primary" target="_blank" rel="noopener noreferrer"
                href="https://script.google.com/macros/s/AKfycbwOxPCjVw3v3Uq_KyBdCAxelWmyv54x2AjKVh2bku5fH9iC4zSmc5frJNfPBwme3lyDRw/exec">
               <svg width="15" height="15" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
-              相談する（Googleフォーム）
+              相談する（webフォーム）
             </a>
             <a class="btn" href="works.html">制作例を見る</a>
           </div>
@@ -1037,14 +1037,14 @@ footer {
     <section class="section card contact-card">
       <h2>お問い合わせ</h2>
       <p class="muted" style="margin:0;">
-        相談はGoogleフォームで受け付けています。<br>
+        相談はwebフォームで受け付けています。<br>
         「相談内容」「予算感」「希望納期」が分かればOKです。
       </p>
       <div class="cta" style="margin-top:14px;justify-content:center;">
         <a class="btn primary" target="_blank" rel="noopener noreferrer"
            href="https://script.google.com/macros/s/AKfycbwOxPCjVw3v3Uq_KyBdCAxelWmyv54x2AjKVh2bku5fH9iC4zSmc5frJNfPBwme3lyDRw/exec">
           <svg width="15" height="15" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
-          Googleフォームを開く
+          webフォームを開く
         </a>
         <a class="btn" href="contact.html">連絡ページへ</a>
       </div>
