--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <!-- 正規URL -->
 <link rel="canonical" href="https://imagawadaigo.github.io/daigo-portfolio/index.html">
 
-<!-- Google Search Console 所有権確認用（★ 実際の値に差し替えてください） -->
-<!-- <meta name="google-site-verification" content="ここにSearch Consoleで表示された値を貼る"> -->
+<!-- Google Search Console 所有権確認用 -->
+<meta name="google-site-verification" content="SmCSO8jRoovedOxzQwAallURRuMJZAoaNwFhObeOWxU" />
 
 <!-- OGP（Facebook / LINE / 一般SNS） -->
 <meta property="og:title" content="今川大悟 | Web制作・資料作成">
